
syntax = "proto3";

package login;

option go_package = "github.com/BrosSquad/go-collect/pb;pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
    uint64 id = 1;
    string username = 2;
    string token = 3;
}
